[package]
name = "rome"
version = "0.2.0"
edition = "2021"
description = "SP-1 firmware flasher and stem manager"

[[bin]]
name = "rome"
path = "src/main.rs"

[dependencies]
serialport = "4"
rusb = "0.9"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
symphonia = { version = "0.5", features = ["flac", "wav", "mp3", "pcm", "ogg"] }
